--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="activity.FavoritesActivity" android:label="@string/manga_activity"/>
+        <activity android:name="activity.MangaActivity" android:label="@string/manga_activity"/>
+        <activity android:name="activity.FavoritesActivity" android:label="@string/favortites_activity"/>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
