--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,15 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/MyMaterialTheme">
         <activity android:name="activity.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="activity.FavoritesActivity" android:label="@string/manga_activity"/>
+        <activity android:name="activity.MangaActivity" android:label="@string/manga_activity"/>
+        <activity android:name="activity.FavoritesActivity" android:label="@string/favortites_activity"/>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
