--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,20 +4,22 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/MyMaterialTheme">
-        <activity android:name="activity.HomeActivity">
+        android:theme="@style/AppTheme">
+        <activity
+            android:name="activity.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="activity.MangaActivity" android:label="@string/manga_activity"/>
-        <activity android:name="activity.FavoritesActivity" android:label="@string/favortites_activity"/>
+
     </application>
 
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
 
 </manifest>
