chat bien avancé

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name="activity.PageActivity" />
+        <activity android:name="activity.ChatActivity" />
 
 
     </application>
