--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-databind:2.8.5'
 
     compile 'com.github.chrisbanes:PhotoView:1.3.1'
+
+    compile 'com.google.guava:guava:20.0'
 }
