--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.github.senerh.shonentouch">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
@@ -24,7 +26,7 @@
 
     </application>
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
 
 
 </manifest>
