--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.3"
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId 'io.github.senerh.shonentouch'
         minSdkVersion 16
@@ -36,7 +36,7 @@ dependencies {
     })
     testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support:design:24.2.1'
     //jackson
     compile 'com.fasterxml.jackson.core:jackson-core:2.8.5'
