--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme"
         android:icon="@mipmap/ic_launcher">
         <activity
-            android:name="activity.MainActivity"
+            android:name="controller.activities.HomeActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -21,8 +21,11 @@
             </intent-filter>
         </activity>
         <activity android:name="activity.PageActivity" />
+        <activity android:name="activity.MainActivity" />
         <activity android:name="activity.ChatActivity" />
 
+        <service
+            android:name="model.services.WSIntentService" />
 
     </application>
 
