--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile 'com.github.chrisbanes:PhotoView:1.3.1'
 
     compile 'com.google.guava:guava:20.0'
+    compile 'com.facebook.stetho:stetho:1.4.2'
 }
