--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,35 @@
         <activity android:name="activity.MainActivity" />
         <activity android:name="activity.ChatActivity" />
         <activity
-            android:name="controller.activities.AddNewMangaActivity"
+            android:name="controller.activities.MangaActivity"
             android:parentActivityName="controller.activities.HomeActivity"/>
+
+        <!--
+   Authorities is the package name, while name is the file of the provider
+   Add content provider so android's content resolver can see it.
+   The authority matches package, name represents the file the provider is in.
+   The syncable flag lets android now we're going to synchronize our content provider with the server.
+   Changing the exported tag to false means that only our app can see the content.
+        -->
+        <provider
+            android:name="model.database.ShonenTouchProvider"
+            android:authorities="io.github.senerh.shonentouch"
+            android:exported="false"
+            android:protectionLevel="signature"
+            android:syncable="true" />
+
+        <meta-data
+            android:name="DATABASE"
+            android:value="manga.db" />
+        <meta-data
+            android:name="VERSION"
+            android:value="1" />
+        <meta-data
+            android:name="QUERY_LOG"
+            android:value="true" />
+        <meta-data
+            android:name="DOMAIN_PACKAGE_NAME"
+            android:value="io.github.senerh.shonentouch.model.entities" />
 
         <service
             android:name="model.services.WSIntentService" />
