--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:name="controller.activities.MangaActivity"
             android:parentActivityName="controller.activities.HomeActivity"/>
 
+        <activity
+            android:name="controller.activities.PageActivity"
+            android:parentActivityName="controller.activities.MangaActivity"/>
+
         <!--
    Authorities is the package name, while name is the file of the provider
    Add content provider so android's content resolver can see it.
