--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
 
     compile 'com.google.guava:guava:20.0'
     compile 'com.facebook.stetho:stetho:1.4.2'
+    compile 'com.android.support:cardview-v7:25.3.0'
 }
