--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,8 @@
 
         <service
             android:name="model.services.WSIntentService" />
+        <service
+            android:name="model.services.HeavyActionsIntentService" />
 
     </application>
 
