--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:largeHeap="true"
         android:theme="@style/AppTheme"
         android:icon="@mipmap/ic_launcher">
+
         <activity
             android:name="ui.activities.HomeActivity"
             android:label="@string/app_name"
@@ -21,13 +22,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name="ui.activities.MangaActivity"
             android:parentActivityName="ui.activities.HomeActivity"/>
 
         <activity
-            android:name="ui.activities.PageActivity"
-            android:parentActivityName="ui.activities.MangaActivity"/>
+        android:name="ui.activities.PageActivity"
+        android:parentActivityName="ui.activities.MangaActivity"/>
+
+        <activity
+            android:name="ui.activities.HelpActivity"
+            android:parentActivityName="ui.activities.HomeActivity"/>
 
         <!--
    Authorities is the package name, while name is the file of the provider
@@ -62,8 +68,5 @@
             android:name="model.services.HeavyActionsIntentService" />
 
     </application>
-
-
-
 
 </manifest>
