--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity
             android:name="ui.activities.HomeActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,7 +35,8 @@
 
         <activity
             android:name="ui.activities.HelpActivity"
-            android:parentActivityName="ui.activities.HomeActivity"/>
+            android:parentActivityName="ui.activities.HomeActivity"
+            android:screenOrientation="portrait"/>
 
         <!--
    Authorities is the package name, while name is the file of the provider
